# metacms

./: .devdbrc  .env  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  README.md  create_admin_user.py  package-lock.json  package.json  pyproject.toml  quick_setup.py  requirements.txt  reset_admin_password.py
app/: alembic.ini  db.py  deps.py  main.py  middleware.py  scheduler.py  security.py  settings.py
app/alembic/: env.py
app/domain/: __init__.py  dto.py  enums.py  models.py
app/repositories/: accounts_repo.py  agents_repo.py  audit_repo.py  balance_repo.py  customers_repo.py  daily_pnl_repo.py  users_repo.py
app/routers/: accounts.py  agents.py  audit.py  auth.py  balance.py  customers.py  health.py  positions.py  reports.py  users.py  webhooks_pipedrive.py  websocket.py
app/services/: audit.py  daily_pnl.py  mt5_manager.py  pipedrive.py  positions.py
scripts/: add_name_column.py  check_daily_report_fields.py  check_database_pnl.py  create_admin.ps1  create_sample_agents.py  debug_login_350007.py  migrate.ps1  migrate_mt5_accounts.py  run.ps1  setup.ps1  test_all_logins_pnl.py  test_daily_pnl.py  verify_migration.py
src/: App.css  App.js  index.css
src/components/: PrivateRoute.js
src/contexts/: ThemeContext.js
src/layouts/: AppHeader.js  AppSidebar.js  DefaultLayout.js
src/pages/: AccountDetail.js  Accounts.js  Agents.js  Audit.js  Balance.js  Customers.js  DailyPnL.js  Dashboard.js  Login.js  Positions.js  Users.js
src/services/: accountService.js  accounts.js  agents.js  (+6 more)
tests/: __init__.py  conftest.py  test_health.py
(+4 files in other folders)
